saving delete old operations